Refactor: seed JSON, consistent error handling, DI for database, 30 tests
- Move RaportItem to Models/RaportItem.cs
- Extract seed data to Data/Seeds/initial-data.json (loaded as MauiAsset)
- Add App.LogError for consistent error logging across all pages
- Register BugFlowDatabase as singleton in MauiProgram.cs
- Inject BugFlowDatabase into App via constructor (removes Lazy<T>)
- Add 3 new tests: HasRequiredText, single-item 100%, unassigned issue valid

--- a/BugFlow.csproj
+++ b/BugFlow.csproj
@@ -59,6 +59,7 @@
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+		<MauiAsset Include="Data\Seeds\initial-data.json" LogicalName="initial-data.json" />
 	</ItemGroup>
 
 	<ItemGroup>
