Bugfixes to repair build

--- a/BugFlow.Tests/BugFlow.Tests.csproj
+++ b/BugFlow.Tests/BugFlow.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BugFlow.csproj" />
+    <ProjectReference Include="..\BugFlow.csproj" ExcludeAssets="build;buildTransitive" />
   </ItemGroup>
 
   <ItemGroup>
