--- a/Platforms/MacCatalyst/Info.plist
+++ b/Platforms/MacCatalyst/Info.plist
@@ -34,5 +34,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>NSQuitAlwaysKeepsWindows</key>
+	<false/>
 </dict>
 </plist>
